--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,15 @@
-.app-counter {
+
+.app-dice {
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #f3f3f3;
 }
 
-.app-counter button {
-  font-size: 20px;
-  font-family: monospace;
+.app-dice img {
+  width: 80px;
+  height: 85px;
+  cursor: pointer;
 }
